--- a/stormchasetest.html
+++ b/stormchasetest.html
@@ -74,19 +74,16 @@
   <div style="margin: 10px 0 20px;">
   <a href="index.html" style="
   display: inline-block;
-  padding: 8px 10px;
+  padding: 6px 12px;               /* tiny padding */
   background: #1e3a8a;
   color: white;
   text-decoration: none;
-  border-radius: 50%;              /* fully round */
-  font-size: 16px;                 /* icon size */
-  width: 40px;
-  height: 40px;
-  line-height: 40px;
-  text-align: center;
-  box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+  border-radius: 6px;
+  font-weight: 600;
+  font-size: 13px;                 /* even smaller text */
+  box-shadow: 0 1px 4px rgba(0,0,0,0.15);
 ">
-  ←
+  ← Home
 </a>
   </div>
   </div>
