--- a/stormchasetest.html
+++ b/stormchasetest.html
@@ -68,7 +68,7 @@
     line-height: 1.1;
     text-shadow: 2px 2px 10px rgba(0,0,0,0.8);
   ">
-    Storm chase 13.07.2023
+    Supercell near Popovec and Čazma
   </h1>
 
   <div style="margin: 10px 0 20px;">
@@ -89,6 +89,15 @@
   </div>
   </div>
 
+  <h2 style="
+  font-size: 1.1rem;
+  color: black;
+  font-weight: bold;
+  margin-bottom: 8px;
+  gap: 10px;
+  ">
+    Chase map
+  </h2>
   <p><em>Zagreb → Komin → reposition back to Popovec → Čazma</em></p>
 
   <!-- Leaflet CSS + JS -->
