--- a/stormchasetest.html
+++ b/stormchasetest.html
@@ -65,6 +65,7 @@
     font-weight: 800;           /* very bold */
     color: white;
     margin: 0;
+    margin-bottom: 8px;
     line-height: 1.1;
     text-shadow: 2px 2px 10px rgba(0,0,0,0.8);
   ">
@@ -90,7 +91,7 @@
   </div>
 
   <h2 style="
-  font-size: 1.1rem;
+  font-size: 1.4rem;
   color: black;
   font-weight: bold;
   margin-bottom: 8px;
