--- a/stormchasetest.html
+++ b/stormchasetest.html
@@ -99,7 +99,7 @@
   ">
     Chase map
   </h2>
-  <p><em>Zagreb → Komin → reposition back to Popovec → Čazma</em></p>
+  <p><em>Zagreb (start of chase) → Komin → reposition back to Popovec → Čazma (end of chase) → back to Zagreb [total: xxx km]</em></p>
 
   <!-- Leaflet CSS + JS -->
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" crossorigin="" />
