--- a/stormchasetest.html
+++ b/stormchasetest.html
@@ -99,7 +99,7 @@
   ">
     Chase map
   </h2>
-  <p><em>Zagreb (start of chase) → Komin → reposition back to Popovec → Čazma (end of chase) → back to Zagreb [total: xxx km]</em></p>
+  <p><em>Zagreb (start of chase) → Komin → reposition back to Popovec → Čazma (end of chase) → back to Zagreb [total: 180 km]</em></p>
 
   <!-- Leaflet CSS + JS -->
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" crossorigin="" />
@@ -111,7 +111,7 @@
 
   <!-- Mini-map container -->
   <div id="mini-map" style="
-  height: 700px;              /* big & impressive */
+  height: 600px;              /* big & impressive */
   width: 100%;
   margin: 30px 0 40px 0;
   border: 2px solid #ccc;
