--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ var popovecMarker = L.marker(popovecLocation, {
       '<h4 style="margin:8px 0 4px;">Storm chase 13.07.2023.</h4>' +
       '<img src="images/zagreb-thumb.jpg" alt="Zagreb preview" ' +
            'style="max-width:100%; height:auto; border-radius:4px; margin-bottom:8px;">' +
-      '<p style="margin:4px 0; font-size:13px;">Superćelija na potezu Popovec - Čazma</p>' +
+      '<p style="margin:4px 0; font-size:13px;">Supercell near Popovec and Čazma</p>' +
       '<a href="stormchasetest.html" target="_blank" ' +
          'style="display:inline-block; padding:6px 12px; background:#0066cc; color:white; ' +
                 'text-decoration:none; border-radius:4px; font-weight:bold;">' +
