--- a/index.html
+++ b/index.html
@@ -54,11 +54,12 @@
     var zagreb = [45.7994, 15.9786];
     var zagrebistok = [45.8008, 16.0546];
     var komin = [46.0018, 16.2822];
+    var popovec = [45.8532, 16.1388];
 
     // Scalable array of chases – add more objects here for new chases
     var chases = [
       {
-        location: [45.8532, 16.1388],  // Popovec location
+        location: popovec,  // Popovec location
         tooltip: "Storm chase 13.07.2023.",
         popup: '<div style="text-align:center; min-width:180px;">' +
                  '<h4 style="margin:8px 0 4px;">Storm chase 13.07.2023.</h4>' +
@@ -71,11 +72,11 @@
                     'Read full story →' +
                  '</a>' +
                '</div>',
-        waypoints: [zagreb, zagrebistok, komin, [45.8532, 16.1388]],  // Route for this chase
+        waypoints: [zagreb, zagrebistok, komin, popovec],  // Route for this chase
         maxWidth: 220
       },
       {
-        location: [46.0018, 16.2822],  // New marker at Komin (example – change as needed)
+        location: komin,  // New marker at Komin (example – change as needed)
         tooltip: "Storm chase 13.07.2023. (Komin point)",
         popup: '<div style="text-align:center; min-width:180px;">' +  // Same popup as requested
                  '<h4 style="margin:8px 0 4px;">Storm chase 13.07.2023.</h4>' +
@@ -88,7 +89,7 @@
                     'Read full story →' +
                  '</a>' +
                '</div>',
-        waypoints: [zagreb, zagrebistok, komin, [45.8532, 16.1388]],  // Same route as requested
+        waypoints: [zagreb, zagrebistok, komin, popovec],  // Same route as requested
         maxWidth: 220
       }
       // Add more chases here as needed, e.g.:
