Add NPivanicgrad to chase waypoints

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
     var komin = [46.0018, 16.2822];
     var popovec = [45.8532, 16.1388];
     var cazma = [45.7524, 16.6085];
+    var NPivanicgrad = [45.6907, 16.3909];
 
     // Scalable array of chases – add more objects here for new chases
     var chases = [
@@ -73,7 +74,7 @@
                     'Read full story →' +
                  '</a>' +
                '</div>',
-        waypoints: [zagreb, zagrebistok, komin, popovec, cazma],  // Route for this chase
+        waypoints: [zagreb, zagrebistok, komin, popovec, NPivanicgrad, cazma],  // Route for this chase
         maxWidth: 220
       },
       {
@@ -90,7 +91,7 @@
                     'Read full story →' +
                  '</a>' +
                '</div>',
-        waypoints: [zagreb, zagrebistok, komin, popovec, cazma],  // Same route as popovec marker
+        waypoints: [zagreb, zagrebistok, komin, popovec, NPivanicgrad, cazma],  // Same route as popovec marker
         maxWidth: 220
       }
       // Add more chases here as needed, e.g.:
