--- a/stormchasetest.html
+++ b/stormchasetest.html
@@ -132,7 +132,12 @@
       maxZoom: 19
     }).addTo(miniMap);
 
-    miniMap.invalidateSize();
+    // Ensure Leaflet recalculates container size once the map is ready.
+    // This helps avoid a misalignment between raster tiles and vector layers.
+    miniMap.whenReady(function() {
+      // Force an immediate size recalculation
+      miniMap.invalidateSize(true);
+    });
 
     // Custom icon – same as index.html
     var customIcon = L.icon({
@@ -177,13 +182,20 @@
     }).addTo(miniMap);
 
     // Auto-fit when route is ready
+    // Force another invalidateSize() and delay fitBounds slightly to ensure tiles + vector layers are aligned.
     miniRoute.on('routesfound', function(e) {
-          var routeLine = e.routes[0].coordinates;
+          // Recalculate size to avoid misalignment when the control was added before layout settled
+          miniMap.invalidateSize(true);
+
+          // Build bounds from the returned coordinates
           var bounds = L.latLngBounds(e.routes[0].coordinates);
-      
-          miniMap.fitBounds(bounds, {
-            padding: [40, 40]           // ← your desired zoom-out level
-          });
+
+          // Small delay to make sure tiles and vector layers are in sync before fitBounds
+          setTimeout(function() {
+            miniMap.fitBounds(bounds, {
+              padding: [40, 40]
+            });
+          }, 80); // 50-150 ms usually sufficient; adjust if needed
     });
   </script>
 
