Update image source for Cazma storm chase popup

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         tooltip: "Storm chase 13.07.2023. (Čazma)",
         popup: '<div style="text-align:center; min-width:180px;">' +  // Same popup as requested
                  '<h4 style="margin:8px 0 4px;">Storm chase 13.07.2023.</h4>' +
-                 '<img src="images/zagreb-thumb.jpg" alt="Zagreb preview" ' +
+                 '<img src="images/20230713 - cazma-thumb.jpg" alt="Zagreb preview" ' +
                       'style="max-width:100%; height:auto; border-radius:4px; margin-bottom:8px;">' +
                  '<p style="margin:4px 0; font-size:13px;">Supercell near Popovec and Čazma</p>' +
                  '<a href="stormchasetest.html" target="_blank" ' +
