Change header background color to dark grey

--- a/stormchasetest.html
+++ b/stormchasetest.html
@@ -21,9 +21,7 @@
   left: 0;
   right: 0;
   height: 60px;
-  background: rgba(30, 58, 138, 0.75);  /* dark blue semi-transparent */
-  backdrop-filter: blur(8px);           /* nice glass effect – supported in modern browsers */
-  -webkit-backdrop-filter: blur(8px);
+  background: rgba(40, 40, 40, 0.75);  /* dark grey semi-transparent – adjust opacity 0.6–0.9 */
   z-index: 1000;
   display: flex;
   align-items: center;
