Change menu text to uppercase

--- a/stormchasetest.html
+++ b/stormchasetest.html
@@ -50,19 +50,19 @@
   <!-- Right: Menu icons + text -->
   <nav style="display: flex; align-items: center; gap: 24px;">
     <a href="index.html" title="Home" style="color: white; text-decoration: none; display: flex; align-items: center; gap: 6px; font-size: 0.95rem;">
-      <span>Home</span>
+      <span>HOME</span>
     </a>
     <a href="#" title="Blog" style="color: white; text-decoration: none; display: flex; align-items: center; gap: 6px; font-size: 0.95rem;">
-      <span>Blog</span>
+      <span>BLOG</span>
     </a>
     <a href="#" title="Photography" style="color: white; text-decoration: none; display: flex; align-items: center; gap: 6px; font-size: 0.95rem;">
-      <span>Photography</span>
+      <span>PHOTOGRAPHY</span>
     </a>
     <a href="#" title="Videos" style="color: white; text-decoration: none; display: flex; align-items: center; gap: 6px; font-size: 0.95rem;">
-      <span>Videos</span>
+      <span>VIDEOS</span>
     </a>
     <a href="#" title="Socials" style="color: white; text-decoration: none; display: flex; align-items: center; gap: 6px; font-size: 0.95rem;">
-      <span>Socials</span>
+      <span>SOCIALS</span>
     </a>
   </nav>
 </header>
