Update styles for stormchasetest.html

--- a/stormchasetest.html
+++ b/stormchasetest.html
@@ -5,12 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Storm chase 13.07.2023.</title>
   <style>
-    body { font-family: Arial, sans-serif; line-height: 1.6; margin: 0; padding: 0; max-width: 1200px; margin: 0 auto; }
-    h1 { color: #2c3e50; }
+    body { font-family: Arial, sans-serif; line-height: 1.6; margin: 0; padding: 0; max-width: 1200px; margin: 0 auto; background-color: #636363; color: #ffffff;}
+    h1, h2, h3, h4, p, li, span, em, strong {
+    color: #ffffff;
+  }
     img { max-width: 100%; height: auto; border-radius: 8px; margin: 10px 0; }
     .gallery { display: flex; flex-wrap: wrap; gap: 10px; }
     #mini-map {
-  background: #f8f8f8; /* fallback color while loading */
+  background: #2d2d2d; /* fallback color while loading */
 }
   </style>
 </head>
