Change background color and heading text color

--- a/stormchasetest.html
+++ b/stormchasetest.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Storm chase 13.07.2023.</title>
   <style>
-    body { font-family: Arial, sans-serif; line-height: 1.6; margin: 0; padding: 0; max-width: 1200px; margin: 0 auto; background-color: #636363; color: #ffffff;}
+    body { font-family: Arial, sans-serif; line-height: 1.6; margin: 0; padding: 0; max-width: 1200px; margin: 0 auto; background-color: #313131; color: #ffffff;}
     h1, h2, h3, h4, p, li, span, em, strong {
     color: #ffffff;
   }
@@ -145,7 +145,7 @@
 
   <h2 style="
   font-size: 1.4rem;
-  color: black;
+  color: white;
   font-weight: bold;
   margin-bottom: 8px;
   gap: 10px;
