Revise Home button styling in stormchasetest.html
Updated the Home button style for better visibility and smaller text.

--- a/stormchasetest.html
+++ b/stormchasetest.html
@@ -124,7 +124,7 @@
   ">
     Supercell near Popovec and Čazma
   </h1>
-
+  <!-- small blue Home button -->
   <div style="margin: 10px 0 20px;">
   <a href="index.html" style="
   display: inline-block;
@@ -271,21 +271,21 @@
     <li>Day 3: Ferry to Hvar, lavender fields...</li>
     <!-- add more -->
   </ul>
-
-  <div style="text-align: center; margin: 40px 0;">
-    <a href="index.html" style="
-      display: inline-block;
-      padding: 12px 24px;
-      background: #1e3a8a;
-      color: white;
-      text-decoration: none;
-      border-radius: 8px;
-      font-size: 16px;
-      font-weight: bold;
-      box-shadow: 0 3px 10px rgba(0,0,0,0.2);
-    ">
-      ← Return to Interactive Map
-    </a>
+  <!-- small blue Home button -->
+  <div style="margin: 10px 0 20px;">
+  <a href="index.html" style="
+  display: inline-block;
+  padding: 6px 12px;               /* tiny padding */
+  background: #1e3a8a;
+  color: white;
+  text-decoration: none;
+  border-radius: 6px;
+  font-weight: 600;
+  font-size: 13px;                 /* even smaller text */
+  box-shadow: 0 1px 4px rgba(0,0,0,0.15);
+  ">
+  ← Home
+  </a>
   </div>
 
 </body>
