Change Home button color to orange with black text

--- a/stormchasetest.html
+++ b/stormchasetest.html
@@ -124,13 +124,13 @@
   ">
     Supercell near Popovec and Čazma
   </h1>
-  <!-- small blue Home button -->
+  <!-- small orange Home button -->
   <div style="margin: 10px 0 20px;">
   <a href="index.html" style="
   display: inline-block;
   padding: 6px 12px;               /* tiny padding */
-  background: #1e3a8a;
-  color: white;
+  background: #f28c28; 
+  color: black;
   text-decoration: none;
   border-radius: 6px;
   font-weight: 600;
@@ -271,13 +271,13 @@
     <li>Day 3: Ferry to Hvar, lavender fields...</li>
     <!-- add more -->
   </ul>
-  <!-- small blue Home button -->
+  <!-- small orange Home button -->
   <div style="margin: 10px 0 20px;">
   <a href="index.html" style="
   display: inline-block;
   padding: 6px 12px;               /* tiny padding */
-  background: #1e3a8a;
-  color: white;
+  background: #f28c28;
+  color: black;
   text-decoration: none;
   border-radius: 6px;
   font-weight: 600;
