--- a/stormchasetest.html
+++ b/stormchasetest.html
@@ -23,7 +23,7 @@
   left: 0;
   right: 0;
   height: 60px;
-  background: rgba(40, 40, 40, 0.75);  /* dark grey semi-transparent – adjust opacity 0.6–0.9 */
+  background: rgba(30, 58, 138, 0.75);  /* blue semi-transparent – adjust opacity 0.6–0.9 */
   z-index: 1000;
   display: flex;
   align-items: center;
