--- a/stormchasetest.html
+++ b/stormchasetest.html
@@ -144,6 +144,7 @@
   </div>
 
   <h2 style="
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 1.4rem;
   color: white;
   font-weight: bold;
