--- a/stormchasetest.html
+++ b/stormchasetest.html
@@ -147,7 +147,7 @@
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 1.4rem;
   color: white;
-  font-weight: bold;
+  font-weight: 800;
   margin-bottom: 8px;
   gap: 10px;
   ">
