--- a/stormchasetest.html
+++ b/stormchasetest.html
@@ -17,6 +17,7 @@
   </style>
 </head>
 <body>
+<!-- Top header -->
 <header style="
   position: fixed;
   top: 0;
@@ -46,11 +47,11 @@
       font-weight: bold;
       font-size: 1.4rem;
       letter-spacing: 1px;
-    ">CroatianStorm</span>
+    ">CroatianStorms</span>
   </a>
 
   <!-- Right: Menu icons + text -->
-  <nav style="display: flex; align-items: center; gap: 24px;">
+  <nav style="display: flex; align-items: center; gap: 24px; padding-right: 40px;">
     <a href="index.html" title="Home" style="color: white; text-decoration: none; display: flex; align-items: center; gap: 6px; font-weight: bold; font-size: 0.75rem;">
       <span>HOME</span>
     </a>
