Add padding to CroatianStorms link

--- a/stormchasetest.html
+++ b/stormchasetest.html
@@ -47,6 +47,7 @@
       font-weight: bold;
       font-size: 1.4rem;
       letter-spacing: 1px;
+      padding-left: 40px;
     ">CroatianStorms</span>
   </a>
 
