Change hover color in menu-link style

--- a/stormchasetest.html
+++ b/stormchasetest.html
@@ -20,7 +20,7 @@
 
 .menu-link:hover {
   text-decoration: underline;
-  color: #80bfff !important;  /* light blue highlight */
+  color: #1e3a8a !important;  /* blue highlight (light blue #80bfff) */ 
 }
   </style>
 </head>
