Improve menu-link styles and hover effects
Updated styles for menu links to enhance appearance on hover.

--- a/stormchasetest.html
+++ b/stormchasetest.html
@@ -15,12 +15,15 @@
   background: #2d2d2d; /* fallback color while loading */
 }
   .menu-link {
-  transition: all 0.2s ease;
+  padding: 6px 10px;
+  border-radius: 6px;
+  transition: all 0.25s ease;
 }
 
 .menu-link:hover {
-  text-decoration: underline;
-  color: #1e3a8a !important;  /* blue highlight (light blue #80bfff) */ 
+  background: rgba(255, 255, 255, 0.15);  /* subtle white overlay */
+  transform: scale(1.08);                 /* slight grow effect */
+  color: #ffffff !important;
 }
   </style>
 </head>
