--- a/stormchasetest.html
+++ b/stormchasetest.html
@@ -15,14 +15,12 @@
   background: #2d2d2d; /* fallback color while loading */
 }
   .menu-link {
-  transition: all 0.25s ease;
-  text-shadow: 0 0 0 rgba(255,255,255,0);
+  transition: all 0.2s ease;
 }
 
 .menu-link:hover {
-  text-shadow: 0 0 10px rgba(77, 166, 255, 0.8);  /* blue glow */
-  color: #80bfff !important;
-  filter: brightness(1.2);
+  text-decoration: underline;
+  color: #80bfff !important;  /* light blue highlight */
 }
   </style>
 </head>
