--- a/stormchasetest.html
+++ b/stormchasetest.html
@@ -16,44 +16,40 @@
 }
   .menu-item {
   position: relative;
-  display: flex;
+  display: inline-flex;
   align-items: center;
-  justify-content: center;
-  width: 36px;                    /* small icon size in normal state */
+  justify-content: flex-start;
+  min-width: 36px;
+  max-width: 36px;               /* start small */
   height: 36px;
-  border-radius: 50%;             /* round in normal state */
+  border-radius: 50%;
+  overflow: hidden;
+  transition: max-width 0.35s ease, border-radius 0.35s ease, box-shadow 0.35s ease;
+  background: transparent;
   color: white;
   text-decoration: none;
-  transition: all 0.3s ease;
-  overflow: hidden;
 }
 
 .menu-item .icon {
-  font-size: 1.4rem;
-  transition: all 0.3s ease;
+  flex-shrink: 0;
+  margin-right: 0;
+  transition: margin-right 0.35s ease;
 }
-
 .menu-item .text {
-  position: absolute;
   opacity: 0;
-  visibility: hidden;
-  white-space: nowrap;
-  font-weight: 600;
-  font-size: 0.8rem;
-  transition: all 0.3s ease;
+  transition: opacity 0.25s ease 0.1s;   /* delayed appearance */
 }
 
 .menu-item:hover {
-  width: auto;                    /* expand on hover */
-  padding: 6px 14px;              /* same padding as your Home button */
-  background: #1e3a8a;            /* exact blue */
-  border-radius: 6px;             /* becomes rectangular button */
-  box-shadow: 0 1px 4px rgba(0,0,0,0.15);  /* same subtle shadow */
-  transform: scale(1.05);         /* slight lift/grow */
+  max-width: 180px;              /* large enough for icon + longest text */
+  border-radius: 6px;
+  background: #1e3a8a;
+  box-shadow: 0 1px 4px rgba(0,0,0,0.15);
+  transform: scale(1.04);        /* very subtle scale – or remove if still shaky */
 }
 
 .menu-item:hover .icon {
-  margin-right: 6px;              /* space between icon and text */
+  margin-right: 8px;
 }
 
 .menu-item:hover .text {
