--- a/stormchasetest.html
+++ b/stormchasetest.html
@@ -46,19 +46,22 @@
 }
 
 .menu-item:hover {
-  max-width: 180px;                    /* expand on hover */
-  padding: 6px 14px;              /* same padding as your Home button */
-  background: #1e3a8a;            /* exact blue */
-  border-radius: 6px;             /* becomes rectangular button */
-  box-shadow: 0 1px 4px rgba(0,0,0,0.15);  /* same subtle shadow */
-  transform: scale(1.04);         /* slight lift/grow */
+  max-width: 260px;              /* larger max-width to fit longer text like "PHOTOGRAPHY" */
+  padding: 6px 14px;             /* same padding as before */
+  background: #1e3a8a;
+  border-radius: 6px;
+  box-shadow: 0 1px 4px rgba(0,0,0,0.15);
+  transform: scale(1.04);
 }
 
 .menu-item:hover .icon {
-  margin-right: 6px;              /* space between icon and text */
+  opacity: 0;                    /* hide icon on hover */
+  margin-right: 0;
+  visibility: hidden;
 }
 
 .menu-item:hover .text {
+  position: static;              /* reset position for smooth appearance */
   opacity: 1;
   visibility: visible;
   color: white;
@@ -68,8 +71,10 @@
 }
 
 .menu-item:hover svg {
-  stroke: #ffffff;                /* white on hover */
-  transform: scale(1.1);          /* slight grow */
+  opacity: 0;                    /* hide SVG icon on hover */
+  stroke: #ffffff;
+  transform: scale(1.1);
+  visibility: hidden;
 }
   </style>
 </head>
@@ -97,7 +102,7 @@
       width: auto;
       border-radius: 4px;
       margin-right: 12px;
-    ">
+    ">-->
     <!-- Fallback text logo if image not uploaded yet -->
     <span style="
       color: white;
@@ -121,33 +126,33 @@
   <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
   <path d="M17 3a2.828 2.828 0 1 1 4 4L7.5 20.5 2 22l1.5-5.5L17 3z"/>
 </svg>
-    <span class="text">BLOG</span>
-  </a>
+  <span class="text">BLOG</span>
+</a>
   <a href="#" class="menu-item" title="Photography">
-    <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+  <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
   <path d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z"/>
   <circle cx="12" cy="13" r="4"/>
 </svg>
-    <span class="text">PHOTOGRAPHY</span>
-  </a>
+  <span class="text">PHOTOGRAPHY</span>
+</a>
   <a href="#" class="menu-item" title="Videos">
-    <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+  <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
   <rect x="2" y="4" width="20" height="16" rx="2"/>
   <polygon points="10 8 16 12 10 16 10 8"/>
 </svg>
-    <span class="text">VIDEOS</span>
-  </a>
+  <span class="text">VIDEOS</span>
+</a>
   <a href="#" class="menu-item" title="Socials">
-    <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+  <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
   <circle cx="18" cy="5" r="3"/>
   <circle cx="6" cy="12" r="3"/>
   <circle cx="18" cy="19" r="3"/>
   <line x1="8.59" y1="13.51" x2="15.42" y2="17.49"/>
   <line x1="15.41" y1="6.51" x2="8.59" y2="10.49"/>
 </svg>
-    <span class="text">SOCIALS</span>
-  </a>
-</nav>
+  <span class="text">SOCIALS</span>
+</a>
+  </nav>
 </header>
 <!-- Hero header with background image -->
 <div style="
@@ -205,12 +210,12 @@
   ">
     Supercell near Popovec and Čazma
   </h1>
-  <!-- small blue Home button -->
+
   <div style="margin: 10px 0 20px;">
   <a href="index.html" style="
   display: inline-block;
   padding: 6px 12px;               /* tiny padding */
-  background: #1e3a8a; 
+  background: #1e3a8a;
   color: white;
   text-decoration: none;
   border-radius: 6px;
@@ -225,10 +230,9 @@
   </div>
 
   <h2 style="
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 1.4rem;
-  color: white;
-  font-weight: 800;
+  color: black;
+  font-weight: bold;
   margin-bottom: 8px;
   gap: 10px;
   ">
