Modify padding for menu item hover effect
Adjusted padding for menu items to improve layout.

--- a/stormchasetest.html
+++ b/stormchasetest.html
@@ -43,7 +43,7 @@
 
 .menu-item:hover {
   max-width: 260px;              /* larger max-width to fit longer text like "PHOTOGRAPHY" */
-  padding: 6px 10px;             /* same padding as before */
+  padding: 4px 12px;             /* 4px smaller then 6px - used for top and bottom */
   background: #1e3a8a;
   border-radius: 6px;
   box-shadow: 0 1px 4px rgba(0,0,0,0.15);
