--- a/stormchasetest.html
+++ b/stormchasetest.html
@@ -44,7 +44,7 @@
 .menu-item:hover {
   max-width: 260px;              /* larger max-width to fit longer text like "PHOTOGRAPHY" */
   padding: 3px 12px;             /* 4px smaller then 6px - used for top and bottom */
-  background: #172c6a;
+  background: #1e3a8a;
   border-radius: 6px;
   box-shadow: 0 1px 4px rgba(0,0,0,0.15);
   transform: scale(1.04);
@@ -202,7 +202,7 @@
   <a href="index.html" style="
   display: inline-block;
   padding: 6px 12px;               /* tiny padding */
-  background: #1e3a8a;
+  background: #2548aa;
   color: white;
   text-decoration: none;
   border-radius: 6px;
