--- a/stormchasetest.html
+++ b/stormchasetest.html
@@ -349,7 +349,7 @@
   <a href="index.html" style="
   display: inline-block;
   padding: 6px 12px;               /* tiny padding */
-  background: #1e3a8a;
+  background: #2548aa;
   color: white;
   text-decoration: none;
   border-radius: 6px;
