--- a/stormchasetest.html
+++ b/stormchasetest.html
@@ -217,9 +217,10 @@
   </div>
 
   <h2 style="
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 1.4rem;
-  color: black;
-  font-weight: bold;
+  color: white;
+  font-weight: 800;
   margin-bottom: 8px;
   gap: 10px;
   ">
